# nasm-patrices

./: CMakeLists.txt  Exercises.md  README.md  add.asm  main.asm  main.c  nasm-build.ps1  sequence_generator.asm
.github/workflows/: c-cpp.yml
